styles.css
@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500;600;700&family=IBM+Plex+Sans:wght@300;400;500;600&family=Montserrat:wght@700;800;900&display=swap');


:root {
    --red: #FA2742;
    --dark-olive: #373833;
    --light-gray: #E8EAE3;
    --dark-gray: #DBDCD5;

}
/* RESET RULE */
* {
    margin: 0; padding 0; border: 0; box-sizing: border-box;
}
body {
    min-height: 100 vh;
    font-family: 'IBM Plex Sans', sans-serif;
}


/**************
   TYPOGRAPHY
 **************/
h1 {
    font-family: 'Montserrat', sans-serif;
    color: var(--dark-olive);
    font-size: 5rem;
    color: white;
    font-weight: 900;
}
h2 {
    font-family: 'IBM Plex Mono', monospace;
    color: white;
    font-size: 3rem;
}

/**************
   BACKGROUND
 **************/
#video-bg {
    position: fixed;
    z-index: -2;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.color-screen {
    position: fixed;
    z-index: -1;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    height: 100%;
    width: 100%;
    background: rgba(55, 56, 51, .6);
}



/**************
    NAV BAR
 **************/
#nav-bar {
    display: flex;
    position: fixed;
    width: 100%;
    height: 5rem;
    /* background: rgba(55, 56, 51, .4); */
    justify-content: center;
    align-items: center;
}

#nav-bar h2{
    height: 5rem;
    display: flex;
    position: absolute;
    left: 0;
    top: 0;
    bottom: 0;
    align-items:center;
    margin: 0;
    margin-left: 2%;
    font-size: 4rem;
    font-weight: 700;


}

.shadow {
    text-shadow: .25rem .125rem var(--red);
    -webkit-text-stroke-width: 1px;
    -moz-text-stroke-width: 1px;
    -webkit-text-stroke-color: white;
    -moz-text-stroke-color: white;
    color: transparent;
}

nav {
    display: inline-block;
    width: auto;
    text-align: center;
    outline: black solid 3px;
}
.nav-list {
    display: inline-block;
    width: auto;
    list-style: none;
}

.nav-item {
    display: inline-block;
    padding: 1rem 2rem;
    text-decoration: none;
    -webkit-transition: all 0.4s ease;
	transition: all 0.4s ease;
    outline: black solid 3px;
}

.nav-item a {
    color: white;
    position: relative;
    font-size: 1.5rem;
    font-weight: 700;
    text-decoration: none;
    padding-bottom: .25rem;
}

.nav-item a:after {
	content: "";
	position: absolute;
	height: 2px;
	background-color: white;
	width: 50%;
	left: 50%;
    margin-top: 1rem;
	bottom: 0;
    -webkit-transform: translateX(-50%);
    -ms-transform: translateX(-50%);
	transform: translateX(-50%);
	-webkit-transition: 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55) all;
  	transition: 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55) all;
}

.nav-item a:hover:after {
	width: 100%;
}

.nav-item a:focus {
    outline: none;
	width: 100%;
}

.nav-item a:focus:after {
    text-decoration: none;
	width: 100%;
}

header {
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100vh;
    /* outline: black solid 3px; */
    /* display: none; */
}

header h2{
    font-family: 'IBM Plex Mono', monospace;
    color: white;
    flex-basis: 100%;
    text-align: center;
    font-weight: 700;
    /* outline: black solid 3px; */
}

header ul {
    display: none;
}

.welcome-card {
    display: flex;
    flex-wrap: wrap;
    font-size: 3.75rem;
    width: 15em;
    min-width: 20rem;
    margin: 0 2rem;
    height: 28.5rem;
    align-content: center;
    justify-content: center;
    background: radial-gradient(55% 60% at center, rgba(55, 56, 51, 1), rgba(55, 56, 51, 0));
    outline: black solid 3px; 
}

.welcome-card h1 {
    color: white;
    text-align: center;
}

